[gd_scene load_steps=4 format=3 uid="uid://dukm6ka23d103"]

[ext_resource type="Script" path="res://Scenes/game_scene.gd" id="1_gmrik"]
[ext_resource type="PackedScene" uid="uid://biuqdrsvd28qd" path="res://SubScenes/player.tscn" id="1_yt7om"]
[ext_resource type="PackedScene" uid="uid://cottps32y6tcp" path="res://SubScenes/line_collision.tscn" id="2_ykbb3"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_gmrik")

[node name="LineCollision" parent="." instance=ExtResource("2_ykbb3")]

[node name="DrawLine" type="Line2D" parent="."]
width = 1.0
default_color = Color(1, 0, 0, 1)

[node name="Player" parent="." instance=ExtResource("1_yt7om")]

[connection signal="area_entered" from="Player/Area2D" to="." method="_on_area_2d_area_entered"]

[editable path="Player"]
